--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,11 @@
             data-wow-duration="0.5s"
             data-wow-delay="0.25s"
           >
-            <form id="contact" action="" method="post">
+            <form
+              id="contact"
+              action="https://formsubmit.co/anas.alawadi@pioneers.ae"
+              method="post"
+            >
               <div class="row">
                 <div class="col-lg-12">
                   <div class="contact-dec">
@@ -1165,70 +1169,66 @@
                           </div>
                         </div>
                       </div>
-                      <form
-                        action="https://formsubmit.co/anas.alawadi@pioneers.ae"
-                        method="POST"
-                      >
-                        <div class="col-lg-6">
-                          <fieldset>
-                            <input
-                              type="name"
-                              name="name"
-                              id="name"
-                              placeholder="Name"
-                              autocomplete="on"
-                              required
-                            />
-                          </fieldset>
-                          <fieldset>
-                            <input
-                              type="email"
-                              name="email"
-                              id="email"
-                              pattern="[^ @]*@[^ @]*"
-                              placeholder="Your Email"
-                              required
-                            />
-                          </fieldset>
-                          <fieldset>
-                            <input
-                              type="hidden"
-                              name="_subject"
-                              value="New submission!"
-                              placeholder="Subject"
-                              autocomplete="on"
-                            />
-                          </fieldset>
-                        </div>
-                        <input
-                          type="hidden"
-                          name="_next"
-                          value="https://anas-pioneers32.github.io/new-web/#[object%20Object]"
-                        />
-                        <div class="col-lg-6">
-                          <fieldset>
-                            <textarea
-                              name="message"
-                              type="text"
-                              class="form-control"
-                              id="message"
-                              placeholder="Message"
-                              required
-                            ></textarea>
-                          </fieldset>
-                        </div>
-                        <div class="col-lg-12">
-                          <fieldset>
-                            <button
-                              type="submit"
-                              id="form-submit"
-                              class="main-button"
-                            >
-                              Send Message Now
-                            </button>
-                          </fieldset>
-                        </div>
-                      </form>
+
+                      <div class="col-lg-6">
+                        <fieldset>
+                          <input
+                            type="name"
+                            name="name"
+                            id="name"
+                            placeholder="Name"
+                            autocomplete="on"
+                            required
+                          />
+                        </fieldset>
+                        <fieldset>
+                          <input
+                            type="email"
+                            name="email"
+                            id="email"
+                            pattern="[^ @]*@[^ @]*"
+                            placeholder="Your Email"
+                            required
+                          />
+                        </fieldset>
+                        <fieldset>
+                          <input
+                            type="hidden"
+                            name="_subject"
+                            value="New submission!"
+                            placeholder="Subject"
+                            autocomplete="on"
+                          />
+                        </fieldset>
+                      </div>
+                      <input
+                        type="hidden"
+                        name="_next"
+                        value="https://anas-pioneers32.github.io/new-web/#[object%20Object]"
+                      />
+                      <div class="col-lg-6">
+                        <fieldset>
+                          <textarea
+                            name="message"
+                            type="text"
+                            class="form-control"
+                            id="message"
+                            placeholder="Message"
+                            required
+                          ></textarea>
+                        </fieldset>
+                      </div>
+                      <div class="col-lg-12">
+                        <fieldset>
+                          <button
+                            type="submit"
+                            id="form-submit"
+                            class="main-button"
+                          >
+                            Send Message Now
+                          </button>
+                        </fieldset>
+                      </div>
 
                       <!-- <div class="col-lg-6">
                         <fieldset>
