--- a/index.html
+++ b/index.html
@@ -1169,9 +1169,65 @@
                         action="https://formsubmit.co/anas.alawadi@pioneers.ae"
                         method="POST"
                       >
-                        <input type="text" name="name" required />
-                        <input type="email" name="email" required />
-                        <button type="submit">Send</button>
+                        <div class="col-lg-6">
+                          <fieldset>
+                            <input
+                              type="name"
+                              name="name"
+                              id="name"
+                              placeholder="Name"
+                              autocomplete="on"
+                              required
+                            />
+                          </fieldset>
+                          <fieldset>
+                            <input
+                              type="email"
+                              name="email"
+                              id="email"
+                              pattern="[^ @]*@[^ @]*"
+                              placeholder="Your Email"
+                              required
+                            />
+                          </fieldset>
+                          <fieldset>
+                            <input
+                              type="subject"
+                              name="_subject"
+                              id="subject"
+                              placeholder="Subject"
+                              autocomplete="on"
+                            />
+                          </fieldset>
+                        </div>
+                        <input
+                          type="hidden"
+                          name="_next"
+                          value="https://anas-pioneers32.github.io/new-web/"
+                        />
+                        <div class="col-lg-6">
+                          <fieldset>
+                            <textarea
+                              name="message"
+                              type="text"
+                              class="form-control"
+                              id="message"
+                              placeholder="Message"
+                              required
+                            ></textarea>
+                          </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                          <fieldset>
+                            <button
+                              type="submit"
+                              id="form-submit"
+                              class="main-button"
+                            >
+                              Send Message Now
+                            </button>
+                          </fieldset>
+                        </div>
                       </form>
 
                       <!-- <div class="col-lg-6">
