--- a/index.html
+++ b/index.html
@@ -1188,6 +1188,7 @@
                           ></input>
                         
                       </div>
+                      <input type="hidden" name="_next" value="https://google.com">
                       <div class="col-lg-12">
                         <input type="text" name="_subject"  placeholder="subject">
                       </div>
