--- a/index.html
+++ b/index.html
@@ -1165,13 +1165,61 @@
                           </div>
                         </div>
                       </div>
-                      <form
-                        action="https://formsubmit.co/anas.alawadi@pioneers.ae"
-                        method="POST"
-                      >
-                        <input type="text" name="name" required />
-                        <input type="email" name="email" required />
-                        <button type="submit">Send</button>
+                      <form action="https://formbold.com/s/9kPWz" method="POST">
+                        <div class="col-lg-6">
+                          <fieldset>
+                            <input
+                              type="name"
+                              name="name"
+                              id="name"
+                              placeholder="Name"
+                              autocomplete="on"
+                              required
+                            />
+                          </fieldset>
+                          <fieldset>
+                            <input
+                              type="text"
+                              name="email"
+                              id="email"
+                              pattern="[^ @]*@[^ @]*"
+                              placeholder="Your Email"
+                              required=""
+                            />
+                          </fieldset>
+                          <fieldset>
+                            <input
+                              type="subject"
+                              name="subject"
+                              id="subject"
+                              placeholder="Subject"
+                              autocomplete="on"
+                            />
+                          </fieldset>
+                        </div>
+                        <div class="col-lg-6">
+                          <fieldset>
+                            <textarea
+                              name="message"
+                              type="text"
+                              class="form-control"
+                              id="message"
+                              placeholder="Message"
+                              required=""
+                            ></textarea>
+                          </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                          <fieldset>
+                            <button
+                              type="submit"
+                              id="form-submit"
+                              class="main-button"
+                            >
+                              Send Message Now
+                            </button>
+                          </fieldset>
+                        </div>
                       </form>
 
                       <!-- <div class="col-lg-6">
