--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       class="main-banner wow fadeIn"
       id="top"
       data-wow-duration="1s"
-      data-wow-delay="0.5s"
+      data-wow-delay="3.5s"
     >
       <div class="container">
         <div class="row">
@@ -154,12 +154,12 @@
                 <div
                   class="left-content show-up header-text wow fadeInLeft"
                   data-wow-duration="1s"
-                  data-wow-delay="1s"
+                  data-wow-delay="3.5s"
                 >
                   <div class="row">
                     <div class="col-lg-12">
                       <h6>Digital Transformation &amp; Smart Solutions</h6>
-                      <h2>We Digitize Your Organization To The Max</h2>
+                      <h2>Your Prafared Partner In Digital Transformation</h2>
                       <p>
                         We offer services that help you transform your company
                         into a digital-first operation. We can help you make
@@ -179,7 +179,7 @@
                 <div
                   class="right-image wow fadeInRight"
                   data-wow-duration="1s"
-                  data-wow-delay="0.5s"
+                  data-wow-delay="3.5s"
                 >
                   <img src="assets/images/SEO-bro.png" alt="" />
                 </div>
@@ -216,12 +216,13 @@
                     <div class="line-dec"></div>
                   </div>
                   <p>
-                    Pioneers is a new company specializing in IT solutions,
-                    digital transformation and printing services. We have been
-                    established to help businesses improve their operations by
-                    providing them with high quality services. Our aim is to
-                    help you grow and succeed by providing you with the right
-                    tools and knowledge to meet your business goals.
+                    WE are a newly formed company that specializes in IT
+                    services, digital transformation, and smart printing. Our
+                    mission is to aid businesses in optimizing their operations
+                    by providing professional-grade services. We are here to
+                    assist you in your journey for success, furnishing you with
+                    the necessary expertise and resources needed to reach your
+                    corporate aspirations.
                     <!-- <a
                       rel="nofollow"
                       href="http://paypal.me/templatemo"
@@ -602,14 +603,14 @@
                                 <div class="left-text">
                                   <h4>Track &amp; Manage Your Assets</h4>
                                   <p>
-                                    The Asset Management software will provide
-                                    you with a holistic view of your
-                                    organization’s assets. Manage and track all
-                                    your physical assets and infrastructure from
-                                    anywhere throughout their entire lifecycle,
-                                    from design, commission, procurement,
-                                    operation, maintenance to disposal and
-                                    replacement.
+                                    Integrating RFID Technology with Asset
+                                    Management software gives you a holistic
+                                    overview of your company's resources. You
+                                    can manage and monitor all physical assets
+                                    and infrastructures located anywhere, during
+                                    their whole lifespan - from design,
+                                    commissioning, procurement, operation,
+                                    maintenance to replacement and disposal.
                                   </p>
                                   <div class="ticks-list">
                                     <span
@@ -781,7 +782,6 @@
                                 <div class="left-text">
                                   <h4>
                                     Let Us Manage Your Organizations Printing
-                                    Infrastructure
                                   </h4>
                                   <p>
                                     We provide a comprehensive MPS solution that
@@ -836,43 +836,40 @@
                             <div class="row">
                               <div class="col-lg-6 align-self-center">
                                 <div class="left-text">
-                                  <h4>Printers</h4>
+                                  <h4>INKJET Technology FAST and Smart</h4>
                                   <p>
-                                    The latest inkjet technology is paving the
-                                    way for some of the worlds fastest printers.
-                                    With cold printing Technology and various
-                                    different finishing options, these machines
-                                    promise an impressive return on investment.
+                                    70 PPM up to 165PPM the world’s fastest
+                                    printers are based on the latest inkjet
+                                    technology. With cold printing Technology,
+                                    minimal parts, and various finishing
+                                    options, these machines promise an
+                                    impressive return on investment.
                                     Furthermore, a competitive cost per click
                                     ensures that color is no longer a financial
                                     challenge when printing. whether you want to
-                                    print forms, booklets, or perfect-binded
+                                    print NCR forms, booklets, or perfect-binded
                                     books its worth looking into.
                                   </p>
                                   <div class="ticks-list">
                                     <span
-                                      ><i class="fa fa-check"></i> Cost
-                                      savings</span
+                                      ><i class="fa fa-check"></i> Fast
+                                      Printing</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> Improved
-                                      security</span
+                                      ><i class="fa fa-check"></i> Quick
+                                      ROI</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> Environmental
-                                      sustainability</span
+                                      ><i class="fa fa-check"></i> No ozone
+                                      emissions</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> Improved
-                                      productivity</span
+                                      ><i class="fa fa-check"></i> No ambient
+                                      air pollution</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> Simplified
-                                      management</span
-                                    >
-                                    <span
-                                      ><i class="fa fa-check"></i>
-                                      Scalability</span
+                                      ><i class="fa fa-check"></i> Better
+                                      working environment</span
                                     >
                                   </div>
                                 </div>
@@ -895,48 +892,38 @@
                             <div class="row">
                               <div class="col-lg-6 align-self-center">
                                 <div class="left-text">
-                                  <h4>panels</h4>
+                                  <h4>NEXT Generation Display Solutions</h4>
                                   <p>
-                                    Interactive Flat Panel Displays (IFPDs)
-                                    provide an engaging and interactive
-                                    experience for students and teachers alike.
-                                    users are accustomed to a range of intuitive
-                                    gestures such as writing or drawing on their
-                                    devices. IFPDs bring this same level of
-                                    interaction to classrooms by leveraging the
-                                    latest touch-based functions available.
+                                    Meeting Rooms or Classrooms, from Home or
+                                    onsite the Interactive Flat Panel Displays
+                                    (IFPDs) provide an engaging and interactive
+                                    experience. Easy screen sharing, intuitive
+                                    writing to annotate, barcode scanning to
+                                    save minutes, and more, makes every meeting
+                                    simple and every classroom alive.
                                   </p>
                                   <div class="ticks-list">
                                     <span
-                                      ><i class="fa fa-check"></i> Optimized
-                                      Template</span
+                                      ><i class="fa fa-check"></i> Smooth
+                                      Operations</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> Data
-                                      Info</span
+                                      ><i class="fa fa-check"></i> Instant
+                                      Response</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> SEO
-                                      Analysis</span
+                                      ><i class="fa fa-check"></i> SMART
+                                      Pen</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> Data
-                                      Info</span
+                                      ><i class="fa fa-check"></i> Smart
+                                      Whiteboard</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> SEO
-                                      Analysis</span
-                                    >
-                                    <span
-                                      ><i class="fa fa-check"></i> Optimized
-                                      Template</span
+                                      ><i class="fa fa-check"></i> Handwriting
+                                      recognition</span
                                     >
                                   </div>
-                                  <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit, sedr do eiusmod deis tempor
-                                    incididunt.
-                                  </p>
                                 </div>
                               </div>
                               <div class="col-lg-6 align-self-center">
@@ -1080,7 +1067,7 @@
               data-bs-target="#myCarousel"
               data-bs-slide="prev"
             >
-              <img src="img/icons/left-arrow.png" alt="prev" />
+              <img src="assets/images/left-arrow.png" alt="prev" />
               <span class="visually-hidden">Previous</span>
             </button>
             <button
@@ -1089,7 +1076,7 @@
               data-bs-target="#myCarousel"
               data-bs-slide="next"
             >
-              <img src="img/icons/right-arrow.png" alt="prev" />
+              <img src="assets/images/right-arrow.png" alt="prev" />
               <span class="visually-hidden">Next</span>
             </button>
           </div>
