--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   <div class="row">
                     <div class="col-lg-12">
                       <h6>Digital Transformation &amp; Smart Solutions</h6>
-                      <h2>Your Prafared Partner In Digital Transformation</h2>
+                      <h2>Your Preferred Partner In Digital Transformation</h2>
                       <p>
                         We offer services that help you transform your company
                         into a digital-first operation. We can help you make
