--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div class="about-right-content">
                   <div class="section-heading">
                     <h6>About Us</h6>
-                    <h4>Who Is <em>Pioneers</em></h4>
+                    <h4>Who Is <em>Pioneers IT Solutins</em></h4>
                     <div class="line-dec"></div>
                   </div>
                   <p>
