--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
               </li> -->
               <li>
                 <a href="https://www.instagram.com/pioneersitsolutions/"
-                  ><i class="fa fa-instagram"></i
-                ></a>
+                  ><img src="assets/images/005-instagram.png" alt=""
+                /></a>
               </li>
               <li>
                 <a
                   href="https://www.linkedin.com/company/pioneers-it-solutions/"
-                  ><i class="fa fa-linkedin"></i
-                ></a>
+                  ><img src="assets/images/008-linkedin.png" alt=""
+                /></a>
               </li>
               <li>
                 <a href="https://www.youtube.com/@PioneersITSolutions"
-                  ><i class="fa fa-youtube"></i
-                ></a>
+                  ><img src="assets/images/004-youtube.png" alt=""
+                /></a>
               </li>
             </ul>
           </div>
@@ -471,7 +471,7 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/Online document-rafiki.png"
+                                    src="assets/images/Hidden-amico.png"
                                     alt=""
                                   />
                                 </div>
@@ -929,7 +929,7 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/Monitor-rafiki.png"
+                                    src="assets/images/Monitor-amico.png"
                                     alt=""
                                   />
                                 </div>
