--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
               data-wow-duration="1s"
               data-wow-delay="0.5s"
             >
-              <h6>Our Products</h6>
-              <h4>What Our Company <em>Provides</em></h4>
+              <!-- <h6>Our Products</h6> -->
+              <h4>Our <em>Products</em></h4>
               <div class="line-dec"></div>
             </div>
           </div>
@@ -961,8 +961,8 @@
               data-wow-duration="1s"
               data-wow-delay="0.3s"
             >
-              <h6>Industries</h6>
-              <h4>See Our Recent <em>Projects</em></h4>
+              <!-- <h6>Industries</h6> -->
+              <h4>Our <em>Industries</em></h4>
               <div class="line-dec"></div>
             </div>
           </div>
