--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image-03.jpg"
+                                    src="assets/images/Invoice-amico.png"
                                     alt=""
                                   />
                                 </div>
