--- a/index.html
+++ b/index.html
@@ -929,7 +929,8 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/Monitor-amico.png"
+                                    style="max-width: 700px"
+                                    src="assets/images/Remote meeting-rafiki.png"
                                     alt=""
                                   />
                                 </div>
