--- a/index.html
+++ b/index.html
@@ -821,6 +821,7 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
+                                    style="max-width: 516px"
                                     src="assets/images/Printing invoices-pana.png"
                                     alt=""
                                   />
